--- a/package.json
+++ b/package.json
@@ -1,13 +1,21 @@
 {
   "name": "zoom",
   "version": "1.0.0",
-  "description": "",
-  "main": "index.js",
+  "description": "Zoom Clone using WebRTC and Websockets",
+  "license": "MIT",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "dev": "nodemon"
   },
-  "keywords": [],
-  "author": "",
-  "license": "ISC",
-  "type": "commonjs"
+  "devDependencies": {
+    "@babel/cli": "^7.28.3",
+    "@babel/core": "^7.28.5",
+    "@babel/node": "^7.28.0",
+    "@babel/preset-env": "^7.28.5",
+    "nodemon": "^3.1.11"
+  },
+  "dependencies": {
+    "express": "^5.1.0",
+    "pug": "^3.0.3",
+    "ws": "^8.18.3"
+  }
 }
