--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "nodemon": "^3.1.11"
   },
   "dependencies": {
+    "@socket.io/admin-ui": "^0.5.1",
     "express": "^5.1.0",
     "pug": "^3.0.3",
     "socket.io": "^4.8.1",
