--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
   "dependencies": {
     "@socket.io/admin-ui": "^0.5.1",
     "express": "^5.1.0",
+    "localtunnel": "^1.8.3",
     "pug": "^3.0.3",
     "socket.io": "^4.8.1",
     "ws": "^8.18.3"
